# trolley

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  bunfig.toml  codama.json  package.json  tsconfig.json
app/app/: page.tsx
programs/trolley/: Cargo.toml
programs/trolley/src/: constants.rs  error.rs  lib.rs  state.rs
programs/trolley/src/instructions/: application.rs  auth.rs  mod.rs  role.rs  user.rs
tests/: trolley.test.ts  txLogger.ts
web/: bunfig.toml  next.config.ts  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: admin-tab.tsx  header.tsx  instruction-log.tsx  providers.tsx  tab-bar.tsx  user-tab.tsx  wallet-connect-button.tsx
web/app/components/ui/: button.tsx  field-input.tsx  field-select.tsx  label.tsx  pill.tsx  section-head.tsx
web/app/context/: chain-context-provider.tsx  chain-context.tsx  connection-context-provider.tsx  connection-context.tsx  selected-wallet-account-context-provider.tsx  selected-wallet-account-context.tsx
web/app/types/: trolley.ts
web/services/: trolley-client.ts
web/shims/: empty.ts
